--- a/deploy_tools/fab_settings.py.example
+++ b/deploy_tools/fab_settings.py.example
@@ -7,10 +7,10 @@ STAGING_HOST = ["127.0.0.1"]
 PRODUCTION_HOST = ["192.168.1.1"]
 
 #The unix user that will be the owner of this project
-PROJECT_USER = "aremind"
-SUDO_USER = "aremind"
+PROJECT_USER = "myproject"
+SUDO_USER = "myproject"
 
-PROJECT_NAME = "aremind"
+PROJECT_NAME = "myproject"
 
 
 #Path to folder that holds both the code_root and virtualenv folder.
